--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="instagram-wrapper">
         <div class = "instagram-phone">
-            <img src="instagram-celular.png" alt="Celular instagram">
+            <img src="img/instagram-celular.png" alt="Celular instagram">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="instagram-logo.png" class="instagram logo" alt="instagram-logo">
+                <img src="img/instagram-logo.png" class="instagram logo" alt="instagram-logo">
                 <div class="profile-phone">
-                    <img src="Novo Projeto (1).png" alt="foto de perfil">
+                    <img src="img/Novo Projeto (1).png" alt="foto de perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue como edsonfreitas</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
